@@ -554,3 +554,15 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 
 # Adds (cid,changing_date) index to calendar tables if missing
 !com.openexchange.groupware.update.tasks.CalendarAddChangingDateIndexTask
+
+# v7.6.0 starts here.
+
+# Extends infostore document tables by "meta" JSON BLOB.
+!com.openexchange.groupware.update.tasks.AddMetaForInfostoreDocumentTable
+
+# Extends infostore document tables by the "(`cid`, `file_md5sum`)" index.
+!com.openexchange.groupware.update.tasks.AddMD5SumIndexForInfostoreDocumentTable
+
+# Adds (cid,changing_date) index to calendar tables if missing
+!com.openexchange.groupware.update.tasks.CalendarAddChangingDateIndexTask
+
