@@ -1,6 +1,7 @@
 * 2014-04-10 - thorben.betten@open-xchange.com
 
  - Fix for bug 31828: Honor possible surrogate pairs when splitting a string during mail-safe conversion
+ - Fix for bug 31987: Extended infostore document tables by the (`cid`, `file_md5sum`) index
 
 * 2014-04-09 - tobias.friedrich@open-xchange.com
 
